# xuetangx-complete

./: .gitignore  ETHICS.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github-workflows-staged/: ci.yml.md
archived/legacy-research-notes/: README.md  SUMMARY.md
docs/: audit-2026-06.md  development-history.md  evidence-standard.md  final-report-2026-06.md  protocol-research-method.md  responsible-disclosure-draft.md  session-findings.md
mock_lms/: README.md  __init__.py  app.py  state_machine.py
references/: homework-opencli.md  technical.md
scripts/: article.py  auto_chrome.py  brush_all.py  discuss.py  extract_course.py  heartbeat.py  homework.py  redact_archived.py
src/: __init__.py
src/telemetry_research/: __init__.py  evidence.py  mock_client.py  models.py  sequence_builder.py  validator.py
tests/: conftest.py  test_business_success.py  test_claim_consistency.py  test_evidence.py  test_false_positive_detection.py  test_heartbeat_count_parametrized.py  test_redaction.py  test_sequence_builder.py
tests/fixtures/: business_failure_200.json  invalid_progress.json  invalid_timestamp.json  normal_sequence.json
